--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "David Cardona-Vásquez"
   pronouns         : "he / him"
-  bio              : "Ph.D.(c) - Energy Systems Modeling. Computer Engineer and Economist with experience in energy systems and markets. Strong focus on machine learning, data analytics, optimization and economic regulation."
+  bio              : "Ph.D.in Engineering, Computer Engineer, and Economist with experience in energy systems and markets. Strong focus on machine learning, data analytics, optimization and economic regulation."
   location         : "Graz, Austria"
   employer         : "Graz University of Technology"
   uri              : # URL
